@@ -1,5 +1,13 @@
 2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Presume availability of `fputs'.
+
+	* rcslex.c (aputs): Move code out
+	of #if has_fputs; delete #else block.
+	* conf.sh: Remove check for `fputs'.
+
+2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Move checks for GCC __attribute__ handling to configure.in
 
 	* conf.sh: Remove checks for GCC attributes `noreturn' and
